1.增加了删除按钮 2.封装了接口

--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,3 +1,4 @@
+<button (click)="deleteSelected()">Delete Selected</button>
 <table>
     <thead>
         <tr>
@@ -17,7 +18,7 @@
             <td>{{item.description}}</td>
             <td>{{item.category}}</td>
             <td>
-                <a (click)="delete(item.id)"> Delete</a>
+                <a (click)="delete([item.id])"> Delete</a>
             </td>
         </tr>
     </tbody>
