--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,3 +1,6 @@
-<app-create-todo></app-create-todo>
+<div>
+    <app-create-todo></app-create-todo>
 
-<app-todo-list></app-todo-list>
+    <app-todo-list></app-todo-list>
+
+</div>
