--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -18,7 +18,7 @@
             <td>{{item.description}}</td>
             <td>{{item.category}}</td>
             <td>
-                <a (click)="delete([item.id])"> Delete</a>
+                <a (click)="delete.next([item.id])"> Delete</a>
             </td>
         </tr>
     </tbody>
