--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,4 +1,4 @@
-<button (click)="deleteSelected()">Delete Selected</button>
+<app-button [text]="'Delete Selected'" (click$)="deleteSelected()"></app-button>
 <table>
     <thead>
         <tr>
