1.创建响应式表单 2.添加表单验证规则

--- a/src/app/layout/button/button.component.html
+++ b/src/app/layout/button/button.component.html
@@ -1,1 +1,1 @@
-<button (click)="click$.next($event)">{{text}}</button>
+<button (click)="click$.next($event)" [disabled]="disabled">{{text}}</button>
